--- a/static/css/mypage/ownerpage.css
+++ b/static/css/mypage/ownerpage.css
@@ -321,9 +321,69 @@ img {
     font-size: small;
     padding-left: 15px;
 }
-.reserve>.resev-page {
+
+.resev-page {
+    display: none;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.resev-page.active {
     display: flex;
 }
+
+.res-card {
+    width: 600px;
+    height: 150px;
+    border-radius: 8px;
+    /* box-sizing: border-box; */
+    background-color: #f9f9f9;
+    position: relative;
+}
+
+
+.res-card ul {
+    display: flex;
+    gap: 10px;
+    list-style: none;
+    padding: 0;
+    margin-bottom: 10px;
+}
+
+.res-card .type {
+    background-color: #ccc;
+    padding: 4px 10px;
+    border-radius: 20px;
+    font-size: 12px;
+}
+
+.res-card .status {
+    background-color: #b9fda4;
+    padding: 4px 10px;
+    border-radius: 20px;
+    font-size: 12px;
+}
+
+.schedule{
+    font-size: 14px;
+    margin: 4px 15px;
+}
+.schedule>span {
+    font-size: 14px;
+    margin-top: 1px;
+}
+.sit {
+    font-size: 14px;
+    margin: 4px 0;
+}
+.price {
+    font-size: 14px;
+    margin: 4px 0;
+}
+
+
+
 .res1 {
     border: 1px solid;
     border-radius: 5px;
@@ -386,7 +446,7 @@ img {
     width: 280px;
     height: 30px;
     display: block;
-    text-align: center; */
+    text-align: center;  */
     margin-top: 10%;
     margin-left: 13px;
     font-size: medium;
@@ -397,7 +457,7 @@ img {
     border: 1px solid;
     width: 280px;
     height: 30px;
-    text-align: center; */
+    text-align: center;  */
     margin-left: 51%;
     margin-top: -30px;
     font-size: medium;
@@ -463,8 +523,8 @@ img {
     border-radius: 3px;
     width: 280px;
     height: 30px;
-    display: block;
-    text-align: center; */
+    display: block; */
+    text-align: center;
     margin-top: 10%;
     margin-left: 13px;
     font-size: medium;
@@ -475,14 +535,59 @@ img {
     border: 1px solid;
     width: 280px;
     height: 30px;
-    text-align: center; */
+    text-align: center;  */
     margin-left: 51%;
     margin-top: -30px;
     font-size: medium;
 }
 
+*/
+/* .actions {
+  margin-top: 10px;
+  display: flex;
+  gap: 10px;
+}
+
+.actions button {
+  flex: 1;
+  padding: 6px 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #e0f0ff;
+  cursor: pointer;
+} */
+
+.allres {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    gap: 10px;
+}
+
+.allres .number {
+    display: flex;
+    gap: 5px;
+    list-style: none;
+    padding: 0;
+}
+
+.page-btn {
+    padding: 6px 10px;
+    border: 1px solid #999;
+    background-color: white;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.page-btn.active {
+    background-color: #b9fda4;
+    font-weight: bold;
+}
+
+
 /* pagenation */
-          
+
 
 /* pet profil */
 .all-pro {
@@ -742,4 +847,3 @@ img {
 
     margin: 13px 7px 15px 11px;
 }
-
