--- a/pet/src/main/resources/static/css/board.css
+++ b/pet/src/main/resources/static/css/board.css
@@ -1,3 +1,13 @@
+/* no content*/
+.no-content {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    min-height: calc(100vh - 500px);
+}
+
 .board-container {
     position: relative;
     display: flex;
@@ -34,6 +44,7 @@
 }
 
 .b-layout>li {
+    position: relative;
     display: block;
 }
 
@@ -43,9 +54,29 @@
     padding-left: 15px;
 }
 
+.board-list-wrap {
+    position: relative;
+    min-height: calc(100vh - 500px);
+}
+
+.board-list {
+    text-align:center;
+}
+
 .board-title-num,
 .board-list-num {
     flex: 0.4;
+    text-align: start;
+}
+
+.board-list-num::after,
+.board-list-cont::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    height: 20px;
+    width: 1px;
+    background: #333;
 }
 
 .board-title-cont,
@@ -92,11 +123,8 @@
 
 .add:hover {
     background: #333;
-    border: none;
-}
-
-.add:hover>a {
     color: #fff;
+    border: none;
 }
 
 .paging {
