--- a/pet/src/main/resources/templates/board/addContent.html
+++ b/pet/src/main/resources/templates/board/addContent.html
@@ -17,7 +17,7 @@
 
 <div class="content" layout:fragment="content">
   <div class="add-content-wrap">
-    <form id="addConFrm">
+    <form id="addConFrm" th:action="@{/board/add}" method="post">
       <div class="add-title">
         <input class="input-title" type="text" name="title" placeholder="제목">
       </div>
@@ -27,9 +27,7 @@
       </div>
 
       <div class="add-btn">
-        <button class="input-btn btn" id="addContentBtn">
-          <a th:href="@{/board}">작성</a>
-        </button>
+        <button class="input-btn btn" id="addContentBtn" type="submit">작성</button>
       </div>
     </form>
   </div>
