--- a/static/css/mypage/ownerpage.css
+++ b/static/css/mypage/ownerpage.css
@@ -6,6 +6,10 @@ img {
     margin: 5px;
 }
 
+button {
+    border-radius: 5px;
+}
+
 .produce {
     border: 1px solid;
     border-radius: 3px;
@@ -181,12 +185,16 @@ img {
     width: 280px;
     height: 30px;
     font-size: medium;
+    border: none;
+    border-radius: 5px;
 }
 
 .view2>button {
     width: 280px;
     height: 30px;
     font-size: medium;
+    border: none;
+    border-radius: 5px;
 }
 
 /* 채팅 모달 */
@@ -225,16 +233,17 @@ img {
     padding: 15px;
     font-size: 18px;
     font-weight: bold;
-    display: flex;
+    display: block;
     justify-content: space-between;
     align-items: center;
+
 }
 
 /* 닫기 버튼 */
 .chat-header .close {
     cursor: pointer;
     font-size: 24px;
-    left: 66%;
+    left: 61%;
     top: 9.5%;
 }
 
@@ -278,24 +287,28 @@ img {
     width: 280px;
     height: 30px;
     font-size: medium;
+    border: none;
 }
 
 .chart2>button {
     width: 280px;
     height: 30px;
     font-size: medium;
+    border: none;
 }
 
 .chat1>button {
     width: 80px;
     height: 30px;
     font-size: medium;
+    border: none;
 }
 
 .chat2>button {
     width: 80px;
     height: 30px;
     font-size: medium;
+    border: none;
 }
 
 /* --------------------------------------------- */
@@ -336,7 +349,7 @@ img {
 
 .res-card {
     width: 600px;
-    height: 150px;
+    height: 160px;
     border: none;
     border-radius: 8px;
     /* box-sizing: border-box; */
@@ -388,11 +401,12 @@ img {
 }
 
 .res-card .actions button {
-    /* margin-top: 10%; */
+    margin-top: 1%;
     margin-left: 13px;
     font-size: medium;
     width: 280px;
     height: 30px;
+    border: none;
 }
 
 .res1 {
@@ -552,25 +566,12 @@ img {
     font-size: medium;
 }
 
-*/
-/* .actions {
-  margin-top: 10px;
-  display: flex;
-  gap: 10px;
-}
-
-.actions button {
-  flex: 1;
-  padding: 6px 10px;
-  border: none;
-  border-radius: 5px;
-  background-color: #e0f0ff;
-  cursor: pointer;
-} */
 
 .reserve .allres {
     display: flex;
     margin-top: 20px;
+    margin-left: 39.5%;
+    margin-bottom: 10px;
     gap: 10px;
 }
 
@@ -582,18 +583,14 @@ img {
     cursor: pointer;
 }
 
-.left {
-    margin-left: 50%;
-}
 
 .allres .number {
     display: flex;
-    gap: 5px;
+    gap: 10px;
     list-style: none;
-    padding: 0;
-    margin-left: 10%;
+    padding: 5px;
+    margin-right: 2px;
 }
-
 
 .page-btn {
     padding: 6px 10px;
@@ -611,9 +608,6 @@ img {
     font-weight: bold;
     margin-left: 10%;
 }
-
-
-/* pagenation */
 
 
 /* pet profil */
