2025-06-04 / 게시판 글  삭제 기능 추가 완료 / 기능 추가 예정 사항) 헤더부분 사용자 이름 수정, 게시판 글 수정, 페이지네이션, 저장된 ROLE에 따라 로그인되는 기능

--- a/pet/src/main/resources/static/css/board.css
+++ b/pet/src/main/resources/static/css/board.css
@@ -258,8 +258,23 @@
     font-size: 1.4rem;
 }
 
+.vc-btn {
+    position: relative;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    gap: 20px;
+}
+
 .back {
-    position: absolute;
-    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #333;
+}
+
+.del {
+    background : crimson;
+    color: #fff;
 }
 
