--- a/static/css/mypage/ownerpage.css
+++ b/static/css/mypage/ownerpage.css
@@ -236,15 +236,15 @@ button {
     display: block;
     justify-content: space-between;
     align-items: center;
-    position: relative;
+
 }
 
 /* 닫기 버튼 */
 .chat-header .close {
-    position: absolute;
     cursor: pointer;
     font-size: 24px;
-    top: 15px;
+    left: 61%;
+    top: 9.5%;
 }
 
 /* 채팅 메시지 영역 */
